Fix modal positioning on mobile view

--- a/src/components/Login/Login.module.scss
+++ b/src/components/Login/Login.module.scss
@@ -1,14 +1,20 @@
 @use '../../mixins/variables' as *;
+@use '../../mixins/mediaSize' as *;
 
 .login {
   background-color: white;
-  height: 20.19rem;
-  width: 27.5rem;
+  height: 100%;
+  width: 100%;
   border-radius: 0.19rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  @include mediaDesktop {
+    height: 20.19rem;
+    width: 27.5rem;
+  }
 }
 
 .login__container {
