--- a/src/components/Register/Register.module.scss
+++ b/src/components/Register/Register.module.scss
@@ -1,14 +1,20 @@
 @use '../../mixins/variables' as *;
+@use '../../mixins/mediaSize' as *;
 
 .register {
   background-color: white;
-  height: 27.69rem;
-  width: 27.5rem;
+  height: 100%;
+  width: 100%;
   border-radius: 0.19rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+
+  @include mediaDesktop {
+    height: 27.69rem;
+    width: 27.5rem;
+  }
 }
 
 .register__container {
